# aumos-mlops-lifecycle

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  SECURITY.md  docker-compose.dev.yml  pyproject.toml
.github/workflows/: ci.yml
src/aumos_mlops_lifecycle/: __init__.py  main.py  settings.py
src/aumos_mlops_lifecycle/adapters/: __init__.py  artifact_store.py  canary_scheduler.py  cost_tracker.py  dataset_versioner.py  deployment_automator.py  experiment_tracker.py  feast_client.py  hyperopt_adapter.py  kafka.py  mlflow_client.py  model_packager.py  model_promoter.py  observability_client.py  repositories.py  retraining_scheduler.py  testing_harness_client.py  training_orchestrator.py  validation_runner.py
src/aumos_mlops_lifecycle/api/: __init__.py  router.py  schemas.py
src/aumos_mlops_lifecycle/core/: __init__.py  dag_builder.py  interfaces.py  model_card.py  models.py  services.py
tests/: __init__.py  conftest.py  test_api.py  test_repositories.py  test_services.py
